--- a/style.css
+++ b/style.css
@@ -1,6 +1,560 @@
-body {
-    background-color: #55a05f;
-    font-family: Arial, sans-serif;
+html {
+    scroll-behavior: smooth;
+}
+  .page {
+    max-width: 880px;
+    margin: 10px auto;
+    font-family: "Poppins", Arial, sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 400;
+    color: black;
+    background-color: rgb(228, 229, 228);
+    border-color: #3a3a3a;
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: #464747 0px 0px 10px 1px;
+  }
+  .page-body {
+    min-height: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .page-body a {
+    color: white;
+  }
+  .page-body a:hover,
+  .page-body a:focus {
+    text-decoration: none;
+  }
+  .page-body a:active {
+    color:rgba(255, 255, 255, 0.5);
+    text-decoration: underline;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+  }
+  .section-title {
+    position: relative;
+    margin: 0;
+    margin-bottom: 36px;
+    padding-left: 60px;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 600;
+  }
+  .section-title::before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 36px;
+    background-color: #f2c100;
+  }
+  
+  /* Smoothness */
+  .nav a,
+  .projects_title,
+  .projects_title:after,
+  .projects_item:hover .projects_image {
+    transition: all 0.3s ease 0s;
+  }
+  
+  
+  /* Header */
+  header {
+    width: 100%;
+    height: 50px;
+    background-color: #e6e6e6;
+  }
+  .menu {
+    display: none;
+  }
+  .nav_list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0;
     padding: 0;
+    list-style: none;
+  }
+  .nav a {
+    padding: 14px 10px;
+    line-height: 50px;
+    color: black;
+  }
+  .nav a:hover {
+    background-color: #f2c100;
+  }
+  .nav a:active {
+    color: white;
+    text-decoration: none;
+  }
+  
+  /* Left side */
+  .left-side {
+    width: 100%;
+    color: white;
+    background-color: #2c323d;
+  }
+  .figure-left-side {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: min-content;
+    background-color: #343945;
+  }
+  .photo {
+    width: 100%;
+    object-fit: cover;
+  }
+  .left-side .section-title {
+    background-color: rgba(255, 255, 255, 0.1);
+  } 
+  
+  /* Contact */
+  .contact {
+    padding: 44px 0px 54px 0px;
+    background-color: #343945;
+  }
+  .contact_list {
+    list-style: none;
+    margin: 0;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding: 0;
+  }
+  .contact_item {
+    margin-bottom: 25px;
+  }
+  .contact_item:last-child {
+    margin-bottom: 0;
+  }
+  .contact_item a {
+    display: block;
+  }
+  
+  /* Education */
+  .education {
+    padding: 54px 0px 54px 0px;
+  }
+  .education_list {
+    margin: 0;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding: 0;
+    list-style: none;
+  }
+  .education_item {
+    margin-bottom: 25px;
+  }
+  .education_item:last-child {
+    margin-bottom: 0;
+  }
+  
+  /* Right Side */
+  .right-side .section-title {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  .figure-right-side {
+    display: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: min-content;
+  }
+  .page-title {
+    margin: 125px 80px 125px 60px;
+  }
+  .main-title {
+    margin: 0;
+    padding: 0;
+    font-size: 50px;
+    line-height: 50px;
+    font-weight: 600;
+  }
+  .page-title p {
+    font-size: 20px;
+  }
+  
+  /* About me */
+  .about {
+    padding: 0;
+    margin-bottom: 54px;
+  }
+  .about p {
+    margin: 0 60px 0 60px;
+    padding: 0;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  
+  /* Skills */ 
+  .skills {
+    margin-bottom: 54px;
+  }
+  .skills_list {
+    margin: 0px 60px;
+    padding: 0;
+    padding-left: 20px;
+  }
+
+  .key-languages {
+    margin-bottom: 54px;
+  }
+  .key-languages_list {
+    margin: 0px 60px;
+    padding: 0;
+    padding-left: 20px;
+  }
+  
+  /* Code example */
+  .code-example {
+    width: 100%;
+    margin-bottom: 34px;
+  }
+  .code-example details {
+    margin: 0px 60px;
+    cursor: pointer;
+  }
+  .code-example pre {
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    line-height: 14px;
+  }
+  .code-example summary {
+    text-decoration: underline;
+  }
+  .code-example summary:hover {
+    text-decoration: none;
+  }
+  
+  /* Projects section */
+  .projects {
+    margin-bottom: 30px;
+  }
+  .projects_list {
+    display: flex; 
+    flex-wrap: wrap;
+    gap: 25px;
+    margin: 0 60px;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+  }
+  .projects_image {
+    width: 100%;
+    height: max-content;
+    object-fit: contain;
+    box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
+  }
+  .projects_title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    margin: 0;
+    padding: 0 10px;
+    font-weight: 400;
+    color: black;
+  }
+  .projects_title:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 50%;
+    height: 2px;
+    background-color: #ccc;
+  }
+  .projects_technologies img {
+    width: 30px;
+  }
+  .projects_item:hover .projects_image {
+    box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.3);
+  }
+  .projects_item:hover .projects_title {
+    text-shadow: 0px 3px 3px rgba(150, 150, 150, 1);
+  }
+  .projects_item:hover .projects_title:after {
+    width: 100%;
+    background-color: #f2c100;
+  }
+  .projects_item:active .projects_image {
+    box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.2);
+  }
+  .projects_item:active .projects_title {
+    color:rgba(0, 0, 0, 0.5);
+    text-shadow: none;
+  }
+  .projects_item:active .projects_title:after {
+    background-color: #ccc;
+  }
+  
+  /* Footer */
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    padding: 20px 60px 20px 60px;
+    color: white;
+    background-color: #1e232c;
+  }
+  .footer_github {
+    justify-self: start;
+    height: 32px;
+}
+  .footer_year {
+    justify-self: center;
+  }
+  .footer_rsschool {
+    justify-self: end;
+    height: 32px;
+    box-shadow: #ccc 0px 0px 10px 1px;
+  }
+  
+  /* Adaptability */
+  /* Desktop virsion */
+  @media (min-width:  940px) {
+    .page-body {
+      max-width: 1280px;
+    }
+    .container {
+      grid-template-columns: 380px 1fr;
+    }
+    .figure-right-side {
+      display: none;
+    }
+    .projects_list {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 25px;
+    }
+  }
+  
+  /* Tablet version */
+  @media (max-width: 939px) {
+    .contact {
+      padding: 28px 0 35px;
+    }
+    .education {
+      padding: 35px 0;
+    }
+    .contact_list, 
+    .education_list {
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+    .figure--right-side {
+      display: none;
+    }
+    .section-title {
+      margin-bottom: 26px;
+    }
+    .about,
+    .skills,
+    .key-languages,
+    .code-example {
+      margin-bottom: 35px;
+    }
+    .about p,
+    .skills_list,
+    .code-example details,
+    .key-languages_list,
+    .projects_list {
+      margin: 0 30px;
+    }
+  }
+  
+  /* Mobile version */
+  @media (max-width: 639px) {
+  
+    /* Burger menu */
+    body.lock {
+      overflow: hidden;
+    }
+    header {
+      position: fixed;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 50;
+    }
+    header::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #ccc;
+      z-index: 3;
+    }
+    .nav {
+      position: fixed;
+      top: -100%;
+      left: 0;
+      padding-top: 50px;
+      width: 100%;
+      height: 100%;
+      background-color: #e6e6e6;
+      overflow: auto;
+      transition: all 0.3s ease 0s;
+      box-sizing: border-box;
+    }
+    .nav_list {
+      display: block;
+      overflow: auto;
+    }
+    .nav_item {
+      width: 100%;
+    }
+    .nav_item a {
+      display: block;
+      width: 100%;
+      padding: 0 0 0 25px;
+      box-sizing: border-box;
+    }
+    .nav.active {
+      top: 0;
+    }
+    .menu {
+      display: block;
+      position: relative;
+      margin-left: 20px;
+      width: 100px;
+      height: 20px;
+      font: inherit;
+      background-color: #ccc;
+      border: none;
+      cursor: pointer;
+      z-index: 4;
+    }
+    .menu::before,
+    .menu::after {
+      content: '';
+      position: absolute;
+      width: 30px;
+      height: 4px;
+      left: 0;
+      background-color: black;
+      transition: all 0.3s ease 0s;
+    }
+    .menu::before {
+      top: 0;
+    }
+    .menu::after {
+      bottom: 0;
+    }
+    .menu_line {
+      position: absolute;
+      width: 30px;
+      height: 4px;
+      left: 0;
+      top: 8px;
+      background-color: black;
+      transition: all 0.3s ease 0s;
+    }
+    .menu_name {
+      position: absolute;
+      top: 0;
+      line-height: 20px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+    .menu.active::before {
+      transform: rotate(45deg);
+      top: 8px;
+    }
+    .menu.active::after {
+      transform: rotate(-45deg);
+      bottom: 8px;
+    }
+    .menu.active .menu_line {
+      transform: scale(0);
+    }
+    .menu:hover::before {
+      transform: rotate(7deg);
+    }
+    .menu:hover::after {
+      transform: rotate(-7deg);
+    }
+    .menu.active:hover::before {
+      transform: rotate(38deg);
+    }
+    .menu.active:hover::after {
+      transform: rotate(-38deg);
+    }
+    
+    /* Main content */
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      padding-top: 50px;
+    }
+    .left-side  {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .figure--left-side {
+      display: none;
+    }
+    .contact {
+      order: 1;
+      width: 100%;
+      padding: 35px 0;
+      padding-top: 50px;
+      background-color: #2c323d;
+    }
+    .education {
+      order: 0;
+      width: 100%;
+      padding: 35px 0;
+      padding-top: 50px;
+      background-color: #343945;
+    }
+    .right-side {
+      order: -1;
+      width: 100%;
+    }
+    .right-side section:nth-child(n+2) {
+      padding-top: 50px;
+      margin-bottom: 0;
+    }
+    .figure--right-side {
+      display: block;
+    }
+    .page-title {
+      margin: 50px 40px 50px 40px;
+    }
+    .projects {
+      padding-bottom: 28px;
+    }
+    .footer {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+  }
+
+.link {
+    display: flex;
+    justify-content: left;
+    gap: 1.5rem;
+}
+
+.i, .i2 {
+    font-size: 40px;
+    transition: 0.2s all;
+}
+
+.i:hover {
+    transform: scale(1.2);
 }
