feat: add certificates, css modifications

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html {
   }
   .container {
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
+    grid-template-columns: 1fr 15fr;
   }
   .section-title {
     position: relative;
@@ -62,15 +62,11 @@ html {
     transition: all 0.3s ease 0s;
   }
   
-  
   /* Header */
   header {
     width: 100%;
     height: 50px;
-    background-color: #e6e6e6;
-  }
-  .menu {
-    display: none;
+    background-color: #343945;
   }
   .nav_list {
     display: flex;
@@ -81,12 +77,14 @@ html {
     list-style: none;
   }
   .nav a {
-    padding: 14px 10px;
+    padding: 13px 10px;
     line-height: 50px;
-    color: black;
+    color: rgb(249, 246, 246);
+    text-decoration: none;
   }
   .nav a:hover {
     background-color: #f2c100;
+    color: black;
   }
   .nav a:active {
     color: white;
@@ -117,19 +115,18 @@ html {
   /* Contact */
   .contact {
     padding: 44px 0px 54px 0px;
-    background-color: #343945;
   }
-  .contact_list {
+  .contact_list, .education_list, .certificates_list {
     list-style: none;
     margin: 0;
     margin-left: 60px;
     margin-right: 60px;
     padding: 0;
   }
-  .contact_item {
+  .contact_item, .education_item, .certificates_item {
     margin-bottom: 25px;
   }
-  .contact_item:last-child {
+  .contact_item:last-child, .education_item:last-child, .certificates_item:last-child {
     margin-bottom: 0;
   }
   .contact_item a {
@@ -137,21 +134,8 @@ html {
   }
   
   /* Education */
-  .education {
+  #education {
     padding: 54px 0px 54px 0px;
-  }
-  .education_list {
-    margin: 0;
-    margin-left: 60px;
-    margin-right: 60px;
-    padding: 0;
-    list-style: none;
-  }
-  .education_item {
-    margin-bottom: 25px;
-  }
-  .education_item:last-child {
-    margin-bottom: 0;
   }
   
   /* Right Side */
@@ -313,195 +297,24 @@ html {
   .footer_rsschool {
     justify-self: end;
     height: 32px;
-    box-shadow: #ccc 0px 0px 10px 1px;
-  }
-  
-  /* Adaptability */
-  /* Desktop virsion */
-  @media (min-width:  940px) {
-    .page-body {
-      max-width: 1280px;
-    }
-    .container {
-      grid-template-columns: 380px 1fr;
-    }
-    .figure-right-side {
-      display: none;
-    }
-    .projects_list {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 25px;
-    }
-  }
-  
-  /* Tablet version */
-  @media (max-width: 939px) {
-    .contact {
-      padding: 28px 0 35px;
-    }
-    .education {
-      padding: 35px 0;
-    }
-    .contact_list, 
-    .education_list {
-      margin-left: 30px;
-      margin-right: 30px;
-    }
-    .figure--right-side {
-      display: none;
-    }
-    .section-title {
-      margin-bottom: 26px;
-    }
-    .about,
-    .skills,
-    .key-languages,
-    .code-example {
-      margin-bottom: 35px;
-    }
-    .about p,
-    .skills_list,
-    .code-example details,
-    .key-languages_list,
-    .projects_list {
-      margin: 0 30px;
-    }
+    box-shadow: #ffffff 0px 0px 0px 3px;
+    background-color: white;
   }
   
   /* Mobile version */
   @media (max-width: 639px) {
   
-    /* Burger menu */
-    body.lock {
-      overflow: hidden;
-    }
-    header {
-      position: fixed;
-      display: flex;
-      align-items: center;
-      width: 100%;
-      top: 0;
-      left: 0;
-      z-index: 50;
-    }
-    header::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #ccc;
-      z-index: 3;
-    }
-    .nav {
-      position: fixed;
-      top: -100%;
-      left: 0;
-      padding-top: 50px;
-      width: 100%;
-      height: 100%;
-      background-color: #e6e6e6;
-      overflow: auto;
-      transition: all 0.3s ease 0s;
-      box-sizing: border-box;
-    }
-    .nav_list {
-      display: block;
-      overflow: auto;
-    }
-    .nav_item {
-      width: 100%;
-    }
-    .nav_item a {
-      display: block;
-      width: 100%;
-      padding: 0 0 0 25px;
-      box-sizing: border-box;
-    }
-    .nav.active {
-      top: 0;
-    }
-    .menu {
-      display: block;
-      position: relative;
-      margin-left: 20px;
-      width: 100px;
-      height: 20px;
-      font: inherit;
-      background-color: #ccc;
-      border: none;
-      cursor: pointer;
-      z-index: 4;
-    }
-    .menu::before,
-    .menu::after {
-      content: '';
-      position: absolute;
-      width: 30px;
-      height: 4px;
-      left: 0;
-      background-color: black;
-      transition: all 0.3s ease 0s;
-    }
-    .menu::before {
-      top: 0;
-    }
-    .menu::after {
-      bottom: 0;
-    }
-    .menu_line {
-      position: absolute;
-      width: 30px;
-      height: 4px;
-      left: 0;
-      top: 8px;
-      background-color: black;
-      transition: all 0.3s ease 0s;
-    }
-    .menu_name {
-      position: absolute;
-      top: 0;
-      line-height: 20px;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    .menu.active::before {
-      transform: rotate(45deg);
-      top: 8px;
-    }
-    .menu.active::after {
-      transform: rotate(-45deg);
-      bottom: 8px;
-    }
-    .menu.active .menu_line {
-      transform: scale(0);
-    }
-    .menu:hover::before {
-      transform: rotate(7deg);
-    }
-    .menu:hover::after {
-      transform: rotate(-7deg);
-    }
-    .menu.active:hover::before {
-      transform: rotate(38deg);
-    }
-    .menu.active:hover::after {
-      transform: rotate(-38deg);
-    }
-    
     /* Main content */
     .container {
       display: flex;
-      flex-wrap: wrap;
+      flex-wrap: wrap-reverse;
       padding-top: 50px;
     }
     .left-side  {
       display: flex;
       flex-wrap: wrap;
     }
-    .figure--left-side {
+    .figure-left-side {
       display: none;
     }
     .contact {
@@ -511,7 +324,7 @@ html {
       padding-top: 50px;
       background-color: #2c323d;
     }
-    .education {
+    #education {
       order: 0;
       width: 100%;
       padding: 35px 0;
@@ -519,14 +332,14 @@ html {
       background-color: #343945;
     }
     .right-side {
-      order: -1;
+      order: 1;
       width: 100%;
     }
     .right-side section:nth-child(n+2) {
       padding-top: 50px;
       margin-bottom: 0;
     }
-    .figure--right-side {
+    .figure-right-side {
       display: block;
     }
     .page-title {
