--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
   .page {
     max-width: 880px;
-    margin: 10px auto;
+    margin: 30px auto;
     font-family: "Poppins", Arial, sans-serif;
     font-size: 16px;
     line-height: 30px;
@@ -23,22 +23,14 @@ html {
   .page-body a {
     color: white;
   }
-  .page-body a:hover,
-  .page-body a:focus {
-    text-decoration: none;
-  }
-  .page-body a:active {
-    color:rgba(255, 255, 255, 0.5);
-    text-decoration: underline;
-  }
   .container {
     display: grid;
-    grid-template-columns: 1fr 15fr;
+    grid-template-columns: 0.5fr 3fr;
   }
   .section-title {
     position: relative;
     margin: 0;
-    margin-bottom: 36px;
+    margin-bottom: 20px;
     padding-left: 60px;
     font-size: 24px;
     line-height: 36px;
@@ -103,6 +95,9 @@ html {
     width: 100%;
     height: min-content;
     background-color: #343945;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .photo {
     width: 100%;
@@ -114,7 +109,7 @@ html {
   
   /* Contact */
   .contact {
-    padding: 44px 0px 54px 0px;
+    padding: 44px 0px 0 0px;
   }
   .contact_list, .education_list, .certificates_list {
     list-style: none;
@@ -150,7 +145,7 @@ html {
     height: min-content;
   }
   .page-title {
-    margin: 125px 80px 125px 60px;
+    margin: 80px 60px;
   }
   .main-title {
     margin: 0;
@@ -221,20 +216,28 @@ html {
     margin-bottom: 30px;
   }
   .projects_list {
-    display: flex; 
-    flex-wrap: wrap;
-    gap: 25px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
     margin: 0 60px;
     padding: 0;
-    box-sizing: border-box;
     list-style: none;
+    box-sizing: border-box;
+  }
+  .projects_item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0 20px 0;
   }
   .projects_image {
-    width: 100%;
-    height: max-content;
-    object-fit: contain;
+    width: 200px;      /* Set width to a fixed size */
+    height: 130px;     /* Set height to the same fixed size */
+    object-fit: cover;
     box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
   }
+  
   .projects_title {
     display: flex;
     justify-content: space-between;
@@ -255,7 +258,8 @@ html {
     background-color: #ccc;
   }
   .projects_technologies img {
-    width: 30px;
+    height: 40px;
+    margin: 20px 0 20px 0;
   }
   .projects_item:hover .projects_image {
     box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.3);
@@ -276,6 +280,10 @@ html {
   }
   .projects_item:active .projects_title:after {
     background-color: #ccc;
+  }
+  .projects a {
+    color: black;
+    text-decoration: none;
   }
   
   /* Footer */
@@ -301,9 +309,31 @@ html {
     background-color: white;
   }
   
+  .link {
+      display: flex;
+      justify-content: left;
+      gap: 1.5rem;
+  }
+  
+  .i, .i2 {
+      font-size: 40px;
+      transition: 0.2s all;
+  }
+  
+  .i:hover {
+    transform: scale(1.2);
+  }
+  
   /* Mobile version */
   @media (max-width: 639px) {
   
+    .page 
+    {
+      margin: 0;
+      border-width: 0;
+      box-shadow: none;
+    }
+
     /* Main content */
     .container {
       display: flex;
@@ -313,9 +343,14 @@ html {
     .left-side  {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
     }
     .figure-left-side {
       display: none;
+    }
+    .photo {
+      width: 100%;
     }
     .contact {
       order: 1;
@@ -348,6 +383,10 @@ html {
     .projects {
       padding-bottom: 28px;
     }
+    .projects_image {
+      width: 350px;
+      height: 200px;
+    }
     .footer {
       display: flex;
       flex-wrap: wrap;
@@ -357,17 +396,19 @@ html {
     }
   }
 
-.link {
+  @media (max-width: 850px) {
+  .projects_list {
     display: flex;
-    justify-content: left;
-    gap: 1.5rem;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+  }
+
 }
 
-.i, .i2 {
-    font-size: 40px;
-    transition: 0.2s all;
-}
-
-.i:hover {
-    transform: scale(1.2);
+@media (max-width: 800px) {
+  header {
+    height: 100px;
+  }
 }
